# dxh

./: .buildinfo  .gitignore  LICENCE.md  README.md  dxh.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: dxh.doctree  index.doctree
.github/: codecov.yml
.github/workflows/: docs.yml  tests.yml
_modules/: dxh.html  index.html
docs/: conf.py  dxh.rst  index.rst
src/: dxh.py
tests/: test_dxh.py
