[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools",
    "setuptools-scm",
]

[project]
authors = [
    {email = "arc-collab@ucl.ac.uk", name = "UCL Advanced Research Computing Centre Collaborations team"},
]
classifiers = [
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Typing :: Typed",
]
dependencies = [
    "fenics-dolfinx",
    "fenics-ufl",
    "matplotlib",
    "numpy",
]
description = "Collection of helper functions for working with DOLFINx Python interface"
dynamic = [
    "version",
]
keywords = [
]
name = "dxh"
optional-dependencies = {dev = [
    "black",
    "build",
    "mypy",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "ruff",
    "tox",
    "twine",
]}
readme = "README.md"
requires-python = ">=3.9,<3.11"
license.file = "LICENCE.md"
urls.homepage = "https://github.com/UCL/dxh"

[tool.coverage]
report = {skip_covered = true, sort = "cover"}
run = {branch = true, parallel = true, relative_files = true, source = [
    "dxh",
]}
paths.source = [
    "src",
    ".tox*/*/lib/python*/site-packages",
]

[tool.mypy]
explicit_package_bases = true
plugins = [
    "numpy.typing.mypy_plugin",
    "pydantic.mypy",
]

[tool.pytest.ini_options]
addopts = "--color=yes -v"
testpaths = [
    "tests",
]

[tool.ruff]
fix = true
force-exclude = true
ignore = [
    "D203", # no-blank-line-before-class
    "D212", # multi-line-summary-first-line
    "D417", # argument description in docstring (unreliable)
    "PLR2004", # magic values in comparisons
    "RET505", # superfluous else return,
    "UP007", # X | Y for type annotations (Python 3.10+ only)
]
per-file-ignores = {"test_*" = [
    "D103",
    "S101",
]}
select = [
    "A",
    "ARG",
    "B",
    "BLE",
    "C",
    "COM",
    "D",
    "DJ",
    "DTZ",
    "E",
    "EM",
    "ERA",
    "EXE",
    "F",
    "FBT",
    "I",
    "ICN",
    "ISC",
    "N",
    "NPY",
    "PD",
    "PGH",
    "PIE",
    "PL",
    "PT",
    "PTH",
    "PYI",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "S",
    "SIM",
    "T",
    "TCH",
    "TID",
    "UP",
    "W",
    "YTT",
]
target-version = "py39"
isort.known-first-party = [
    "dxh",
]
mccabe.max-complexity = 18
pep8-naming.classmethod-decorators = [
    "classmethod",
    "pydantic.validator",
]
pydocstyle.convention = "google"
pylint.max-args = 10

[tool.setuptools_scm]
local_scheme = "no-local-version"
write_to = "src/_version.py"

[tool.tomlsort]
all = true
spaces_indent_inline_array = 4
trailing_comma_inline_array = true
overrides."project.classifiers".inline_arrays = false
overrides."tool.coverage.paths.source".inline_arrays = false

[tool.tox]
legacy_tox_ini = """
[gh-actions]
python =
    3.9: py39
    3.10: py310

[testenv]
commands =
    pytest --cov
deps =
    pytest
    pytest-cov
conda_deps =
    fenics-dolfinx
    fenics-ufl
    matplotlib
    numpy
conda_channels =
    conda-forge

[tox]
env_list =
    py39
    py310
isolated_build = true
requires = tox-conda
"""
